--- a/Result-new.html
+++ b/Result-new.html
@@ -244,7 +244,7 @@ localStorage.setItem("quizAnswers", JSON.stringify(answers));
     "Bedroom Adventurer": ["Generous Giver", "Promiscuous Plaything", "Punish Me"],
     "Charmer in Charge": ["Promiscuous Plaything", "Generous Giver", "Claimed & Trained"],
     "Claimed & Trained": ["Dungeon Master", "Provoker", "Charmer in Charge"],
-    "Punish Me": ["Provoker", "Claimed & Trained", "Bedroom Adventurer"],
+    "Punish Me": ["Provoker", "Dungeon Master", "Bedroom Adventurer"],
     "Provoker": ["Punish Me", "Claimed & Trained", "Generous Giver"],
     "Dungeon Master": ["Claimed & Trained", "Punish Me", "Promiscuous Plaything"]
   };
